# barf

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile.am  README  README.md  TODO  barf-config.cmake  barf.kdev4  barf.kdevelop  barf.kdevelop.filelist  bootstrap.sh  configure.ac
.kdev4/: barf.kdev4
app/: playground.cpp
app/bpp/: bpp.hpp  bpp_main.cpp  bpp_options.cpp  bpp_options.hpp
app/dev/: Makefile.am  configure.ac  dumblang_parser.trison  dumblang_scanner.reflex
app/example/calculator/: Makefile.am  bootstrap.sh  calculator.hpp  calculator_main.cpp  calculator_parser.cpp  calculator_parser.hpp  calculator_parser.trison  calculator_scanner.cpp  calculator_scanner.hpp  calculator_scanner.reflex  configure.ac
app/reflex/: example.reflex  reflex.hpp  reflex_ast.cpp  reflex_ast.hpp  reflex_ast_representation.cpp  reflex_automaton.cpp  reflex_automaton.hpp  reflex_canonical  reflex_codespecsymbols.cpp  reflex_codespecsymbols.hpp  reflex_enums.cpp  reflex_enums.hpp  reflex_main.cpp  reflex_options.cpp  reflex_options.hpp  reflex_parser.cpp  reflex_parser.hpp  reflex_parser.trison
app/trison/: trison.hpp  trison_ast.cpp  trison_ast.hpp  trison_canonical  trison_codespecsymbols.cpp  trison_codespecsymbols.hpp  trison_dpda.cpp  trison_dpda.hpp  trison_enums.cpp  trison_enums.hpp  trison_graph.cpp  trison_graph.hpp  trison_main.cpp  trison_message.cpp  trison_message.hpp  trison_npda.cpp  trison_npda.hpp  trison_options.cpp  trison_options.hpp  trison_parser.cpp  trison_parser.hpp  trison_parser.trison  trison_parser_header.cpp  trison_parser_header.cpp.template  trison_parser_implementation.cpp  trison_parser_implementation.cpp.template  trison_preprocessor.cpp  trison_preprocessor.hpp  trison_rulephase.hpp  trison_scanner.cpp  trison_scanner.hpp  trison_state.cpp  trison_state.hpp  trison_stateid.cpp  trison_stateid.hpp  trison_stateidentifier.cpp  trison_stateidentifier.hpp  trison_statemachine.cpp  trison_statemachine.hpp  trison_terminal.hpp  (+2 more)
app/trison.unstable/: trison_ast.cpp  trison_ast.hpp  trison_codespecsymbols.cpp  trison_dpda.cpp  trison_dpda.hpp  trison_enums.cpp  trison_enums.hpp  trison_graph.cpp  trison_graph.hpp  trison_main.cpp  trison_message.cpp  trison_npda.cpp  trison_npda.hpp  trison_options.cpp  trison_options.hpp  trison_parser.cpp  trison_parser.hpp  trison_parser.trison
cmake/: barf.cmake  reflex-rules.cmake  trison-rules.cmake
cmake-private/: reflex-dev-rules.cmake  trison-dev-rules.cmake
data/: reflex.cpp.header.codespec  reflex.cpp.implementation.codespec  reflex.cpp.langspec  trison.cpp.header.codespec  trison.cpp.implementation.codespec  trison.cpp.langspec
dev/calc/: CMakeLists.txt  Parser.cpp  Parser.hpp  Parser.trison  Scanner.cpp  Scanner.hpp  Scanner.reflex
doc/: parser_design.txt  pda_refactor_design_notes.txt
doc/doxygen_pages/: acknowledgements.dox  footer.html  generic_regexes.dox  langspec_and_codespec.dox  language_theory.dox  main.dox  references.dox  reflex.dox  reflex_guts.dox  regexes_in_barf.dox  trison_guts.dox
examples/interactive_calculator/: CMakeLists.txt  calculator.hpp  calculator_main.cpp  calculator_parser.cpp  calculator_parser.hpp  calculator_parser.trison  calculator_scanner.cpp  calculator_scanner.hpp  calculator_scanner.reflex
examples/noninteractive_calculator/: CMakeLists.txt  CalcParser.cpp  CalcParser.hpp  CalcParser.trison  Scanner.cpp  Scanner.reflex  ast.cpp  ast.hpp  log.cpp  log.hpp  main.cpp  util.cpp  util.hpp
examples/using_raw_ptr/: CMakeLists.txt  using_raw_ptr_ast.cpp  using_raw_ptr_ast.hpp  using_raw_ptr_main.cpp  using_raw_ptr_parser.cpp  using_raw_ptr_parser.hpp  using_raw_ptr_parser.trison  using_raw_ptr_scanner.cpp  using_raw_ptr_scanner.hpp  using_raw_ptr_scanner.reflex
examples/using_shared_ptr/: CMakeLists.txt  using_shared_ptr_ast.cpp  using_shared_ptr_ast.hpp  using_shared_ptr_main.cpp  using_shared_ptr_parser.cpp  using_shared_ptr_parser.hpp  using_shared_ptr_parser.trison  using_shared_ptr_scanner.cpp  using_shared_ptr_scanner.hpp  using_shared_ptr_scanner.reflex
examples/using_unique_ptr/: CMakeLists.txt  using_unique_ptr_ast.cpp  using_unique_ptr_ast.hpp  using_unique_ptr_main.cpp  using_unique_ptr_parser.cpp  using_unique_ptr_parser.hpp  using_unique_ptr_parser.trison  using_unique_ptr_scanner.cpp  using_unique_ptr_scanner.hpp  using_unique_ptr_scanner.reflex
extra/: barf.xml  barf_preprocessor.xml
lib/commonlang/: barf_commonlang.hpp  barf_commonlang_ast.cpp  barf_commonlang_ast.hpp  barf_commonlang_scanner.cpp  barf_commonlang_scanner.hpp  barf_commonlang_scanner.reflex
lib/core/: barf.cpp  barf.hpp  barf_ast.cpp  barf_ast.hpp  barf_astcommon.cpp  barf_astcommon.hpp  barf_commandlineparser.cpp  barf_commandlineparser.hpp  barf_compiletimeasserts.cpp  barf_compiletimeasserts.hpp  barf_enums.cpp  barf_enums.hpp  barf_filelocation.cpp  barf_filelocation.hpp  barf_filoc.cpp  barf_filoc.hpp  barf_graph.cpp  barf_graph.hpp  barf_inputbase.cpp  barf_inputbase.hpp  barf_list.hpp  barf_message.cpp  barf_message.hpp  barf_optionsbase.cpp  barf_optionsbase.hpp  barf_path.cpp  barf_path.hpp  barf_pointer.hpp  barf_searchpath.cpp  barf_searchpath.hpp  barf_types.hpp  barf_util.cpp  barf_util.hpp  barf_weakreference.hpp
lib/langspec/: barf_langspec.hpp  (+10 more)
targets/: barf.cpp.include.codespec  reflex.cpp.header.codespec  reflex.cpp.implementation.codespec  reflex.cpp.langspec  reflex.cpp.targetspec  trison.cpp.dpda.header.codespec  trison.cpp.dpda.implementation.codespec  trison.cpp.header.codespec  trison.cpp.implementation.codespec  trison.cpp.npda.grammar.header.codespec  trison.cpp.npda.grammar.implementation.codespec  trison.cpp.npda.header.codespec  trison.cpp.npda.implementation.codespec  trison.cpp.npda.npda.header.codespec  trison.cpp.npda.npda.implementation.codespec  trison.cpp.targetspec  trison.cpp_npda.header.codespec  trison.cpp_npda.implementation.codespec  trison.cpp_npda.targetspec
test/: CMakeLists.txt  CalcParser.cpp  CalcParser.hpp  CalcParser.trison  Scanner.cpp  Scanner.hpp  Scanner.reflex  ast.cpp  ast.hpp  log.cpp  main.cpp  util.hpp
(+39 files in other folders)
